; ModuleID = '/home/carl/AnghaBench/curl/lib/extr_url.c_Curl_builtin_scheme.c'
source_filename = "/home/carl/AnghaBench/curl/lib/extr_url.c_Curl_builtin_scheme.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.Curl_handler = type { i32 }

@protocols = common dso_local global %struct.Curl_handler** null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.Curl_handler* @Curl_builtin_scheme(i8* %0) #0 {
  %2 = alloca %struct.Curl_handler*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca %struct.Curl_handler**, align 8
  %5 = alloca %struct.Curl_handler*, align 8
  store i8* %0, i8** %3, align 8
  %6 = load %struct.Curl_handler**, %struct.Curl_handler*** @protocols, align 8
  store %struct.Curl_handler** %6, %struct.Curl_handler*** %4, align 8
  br label %7

7:                                                ; preds = %21, %1
  %8 = load %struct.Curl_handler**, %struct.Curl_handler*** %4, align 8
  %9 = load %struct.Curl_handler*, %struct.Curl_handler** %8, align 8
  store %struct.Curl_handler* %9, %struct.Curl_handler** %5, align 8
  %10 = icmp ne %struct.Curl_handler* %9, null
  br i1 %10, label %11, label %24

11:                                               ; preds = %7
  %12 = load %struct.Curl_handler*, %struct.Curl_handler** %5, align 8
  %13 = getelementptr inbounds %struct.Curl_handler, %struct.Curl_handler* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = load i8*, i8** %3, align 8
  %16 = call i64 @strcasecompare(i32 %14, i8* %15)
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %20

18:                                               ; preds = %11
  %19 = load %struct.Curl_handler*, %struct.Curl_handler** %5, align 8
  store %struct.Curl_handler* %19, %struct.Curl_handler** %2, align 8
  br label %25

20:                                               ; preds = %11
  br label %21

21:                                               ; preds = %20
  %22 = load %struct.Curl_handler**, %struct.Curl_handler*** %4, align 8
  %23 = getelementptr inbounds %struct.Curl_handler*, %struct.Curl_handler** %22, i32 1
  store %struct.Curl_handler** %23, %struct.Curl_handler*** %4, align 8
  br label %7

24:                                               ; preds = %7
  store %struct.Curl_handler* null, %struct.Curl_handler** %2, align 8
  br label %25

25:                                               ; preds = %24, %18
  %26 = load %struct.Curl_handler*, %struct.Curl_handler** %2, align 8
  ret %struct.Curl_handler* %26
}

declare dso_local i64 @strcasecompare(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
